'fin' btn more or less ok --> but let's says 'ok'

--- a/front-end/src/app/core/answers/answer-form/answer-form.component.html
+++ b/front-end/src/app/core/answers/answer-form/answer-form.component.html
@@ -5,8 +5,8 @@
       <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template>
       Correcte : <input type="checkbox" [formControlName]="'isCorrect'"> <br>
       <div class="buttons-bottom">
-        <button type="submit" id="submitAnswer" class="button-card" type="submit" (click)="submitAnswer()">Enregistrer</button>
-        <button type="button" id="cancelAnswer" class="button-card" (click)="reset()">Annuler</button>
+        <button type="submit" id="submitAnswer" class="button" type="submit" (click)="submitAnswer()">Enregistrer</button>
+        <button type="button" id="cancelAnswer" class="button btn" (click)="reset()">Annuler</button>
       </div>
     </form>
 </div>
