--- a/front-end/src/app/core/players/player-list-admin/player-list-admin.component.html
+++ b/front-end/src/app/core/players/player-list-admin/player-list-admin.component.html
@@ -7,7 +7,7 @@
 </div>
 <div class="main">
     <div class="new-button" (click)="modalService.open(playerFormModal)"> 
-        <i class="fas fa-plus-circle"></i> Nouveau Accueilli
+        <i class="fas fa-plus-circle"></i> Nouvel Accueilli
     </div>
     <div class="player-list">
         <div class="fixed-container-bigger" *ngFor="let player of playerList">
