--- a/front-end/src/app/core/quizzes/timer-form-modal/timer-form-modal.component.scss
+++ b/front-end/src/app/core/quizzes/timer-form-modal/timer-form-modal.component.scss
@@ -1,8 +1,4 @@
 @import 'src/styles/card.scss';
 @import "src/styles/variables";
 @import 'src/styles/images.scss';
-
-
-.new-button:hover {
-    cursor: pointer;
-  }
+@import '../../../../styles/common.scss';
