--- a/front-end/src/app/game/answer-widget/answer-widget.component.scss
+++ b/front-end/src/app/game/answer-widget/answer-widget.component.scss
@@ -7,3 +7,8 @@
     margin: 0.5em; //                                              3 4 peu importe l'écran
     font-size: x-large;//--> responsive then
 }
+
+.frame {
+    height: 10rem;
+    width: 10rem;
+}
