--- a/front-end/src/app/game/selected-vs-right-answer/selected-vs-right-answer.component.html
+++ b/front-end/src/app/game/selected-vs-right-answer/selected-vs-right-answer.component.html
@@ -1,12 +1,15 @@
-<div *ngIf="answerSelected !==null && answerSelected!=rightAnswer; else elseBlock" class="box-answers">
-    <div class="answer-li">Votre réponse:<br>
-        <div *ngIf="answerSelected.value">{{answerSelected.value}}</div>
-        <div *ngIf="imageSel.url" class="frame"><img class="thumbnail" [src]="imageService.getImgSrc1(imageSel)" alt="answer image"></div>
-    </div>
-    <div class="separation"></div>
-    <div *ngIf = "rightAnswer" class="answer-li">Réponse attendue :<br>
-        <div *ngIf="rightAnswer.value">{{rightAnswer.value}}</div>
-        <div *ngIf="image.url" class="frame"><img class="thumbnail" [src]="imageService.getImgSrc1(image)" alt="answer image"></div>
+<div *ngIf="answerSelected !==null && answerSelected!=rightAnswer; else elseBlock"
+class="vsBlock">
+    <div class="same-line">
+        <div class="givenAnswer"><span class="italic">Votre réponse:</span><br>
+            <div *ngIf="answerSelected.value" class="txtAns">{{answerSelected.value}}</div>
+            <div *ngIf="imageSel.url" class="frame"><img class="thumbnail" [src]="imageService.getImgSrc1(imageSel)" alt="answer image"></div>
+        </div>
+        <div class="separation"></div>
+        <div *ngIf = "rightAnswer" class="answer-li"> <span class="italic">Réponse attendue :</span><br>
+            <div *ngIf="rightAnswer.value" class="txtAns">{{rightAnswer.value}}</div>
+            <div *ngIf="image.url" class="frame"><img class="thumbnail" [src]="imageService.getImgSrc1(image)" alt="answer image"></div>
+        </div>
     </div>
 </div>
 <ng-template #elseBlock>
