--- a/front-end/src/app/start/password/password.component.html
+++ b/front-end/src/app/start/password/password.component.html
@@ -7,7 +7,7 @@
 <div class = "center horizontal-center">
     <form [formGroup]="loginForm">
         <input class = "horizontal-center"[formControlName]="'password'" type="password" placeholder="Entrez le mot de passe">
-        <button class = "big-button" (click) = "loginUser()">Valider</button>
+        <div class = "big-button" (click) = "loginUser()">Valider</div>
         <div *ngIf="!isCorrect">
             Vous avez entrez une mauvaise valeur ... Veuillez réessayer !
         </div>
