--- a/front-end/src/app/core/quizzes/timer-form-modal/timer-form-modal.component.html
+++ b/front-end/src/app/core/quizzes/timer-form-modal/timer-form-modal.component.html
@@ -1,6 +1,6 @@
-<div class="new-button" (click)="modalService.open(timerFormModal)"> 
+<div class="left-button" (click)="modalService.open(timerFormModal)"> 
     <i class="fas fa-cogs"></i> Paramètres
-</div> 
+</div>
 <ng-template #timerFormModal let-modal>
     <div class="modal-header">
       <h4 class="modal-title" id="modal-basic-title">Changer la durée des timers :</h4>
