--- a/front-end/src/app/game/answer-list-widget/answer-list-widget.component.html
+++ b/front-end/src/app/game/answer-list-widget/answer-list-widget.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="display === SHOW_ANSWER_TO_CHOOSE" class="grid">
-    <div *ngFor = "let answer of answers">
+    <div class="answer" *ngFor = "let answer of answers">
         <app-answer-widget [answer] = "answer" (selected) = "onAnswerSelected($event)"></app-answer-widget>
     </div>
 </div>
@@ -8,9 +8,13 @@
     <app-selected-vs-right-answer [answerSelected] = "answerSelected" [answers] = "answers"></app-selected-vs-right-answer >
 </div>
 
+
 <div *ngIf="display === SHOW_RIGHT_ANSWER ">
     <app-right-answer [answers]=answers></app-right-answer>
-    <div *ngIf="displayNextButton" class="shazamButton" [@shazam]='zoom' (click)="nextQuestion()">
+</div>
+
+<div *ngIf="display === SHOW_RIGHT_ANSWER">
+    <div *ngIf="displayNextButton" class="bottomBtn shazamButton" [@shazam]='zoom' (click)="nextQuestion()">
         <div>Suivant <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
     </div>
 </div>
