--- a/front-end/src/app/game/recap/recap.component.scss
+++ b/front-end/src/app/game/recap/recap.component.scss
@@ -4,22 +4,40 @@
 @import '../../../styles/common.scss';
 
 
-.box{
+/*
+.box {
     @extend .vertical-layout;
     @extend .center;
     width: fit-content;
     margin: auto;
     padding: 10px;
-
-    /*border-style: solid;
-    border-radius: 10px;;
-    border-color:  rgb(243, 58, 144);*/
-
     text-align: center;
+    margin-top: 2rem;
+}*/
+
+.frame {
+    height: 8rem;
+    width: 12rem;
 }
 
-.frame{
-    width: 100%;
-    height: 100%;
-    max-width: 350px;
+.button-card {
+    width: 15rem;
+    height: 8rem;
+}
+
+.place-button {
+    position: fixed;
+}
+
+.button-end {
+    @extend .button-purple-theme;
+    height: 7rem;
+    line-height: 7rem;
+    width: 15rem;
+    text-align: center;
+    font-size: 3rem;
+    position: fixed;
+    bottom: 5rem;
+    left: 12rem;
+    //right: 10rem;
 }
