--- a/front-end/src/app/game/right-answer/right-answer.component.scss
+++ b/front-end/src/app/game/right-answer/right-answer.component.scss
@@ -7,10 +7,10 @@
     font-size: larger;
     font-weight: bold;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .frame{
-    width: 100%;
-    height: 100%;
-    max-width: 350px;
+    height: 20rem;
+    width: 25rem;
 }
