--- a/front-end/src/app/game/runner/runner.component.scss
+++ b/front-end/src/app/game/runner/runner.component.scss
@@ -3,38 +3,12 @@
 @import '../../../styles/layout.scss';
 @import '../../../styles/common.scss';
 
-.box{
-    /*@extend .vertical-layout;
-    @extend .center;*/
-    width: fit-content;
-    margin: auto;
-    padding: 10px;
 
-    border-style: solid;
-    border-radius: 10px;;
-    border-color:  rgb(243, 58, 144);
-
-    text-align: center;
+.questionQuiz {
+    font-size: 100%;
 }
 
-.button-recap {
-    padding: 0.5em 0;
-    //font-size: 350%;
-    font-size: 500%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    //width: 80%;
-    height: 50%;
-    text-align: center;
-    cursor: pointer;;
-  }
-
-.question-image {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 200px;
-}
-.labelandimage{
-    margin-left: auto;
-    margin-right: auto;
+.frame {
+    height: 8rem;
+    width: 12rem;
 }
