--- a/front-end/src/app/start/screen-admin/screen-admin.component.html
+++ b/front-end/src/app/start/screen-admin/screen-admin.component.html
@@ -8,9 +8,13 @@
 
 <div class="main">
 <div class="vertical-center">
-    <div class="big-button" routerLink= "./quiz-list">Quiz</div>
-    <div class="big-button" routerLink= "./player-list">Accueillis</div>
-    <div class="big-button" routerLink = "./gallery">Galerie</div> 
-    <div class="big-button" routerLink= "./theme-list">Thèmes</div>
+    <div class="same-line">
+        <div class="big-button" routerLink = "./gallery">Galerie</div> 
+        <div class="big-button" routerLink= "./quiz-list">Quiz</div>
+    </div>
+    <div class="same-line"> 
+        <div class="big-button" routerLink= "./theme-list">Thèmes</div>
+        <div class="big-button" routerLink= "./player-list">Accueillis</div>
+    </div>
 </div>
 </div>
