--- a/front-end/src/styles/layout.scss
+++ b/front-end/src/styles/layout.scss
@@ -52,6 +52,11 @@
     flex-direction: column;
 }
 
+.same-line {
+    @extend .center-flex;
+    flex-direction: row;
+}
+
 .overflowing-text {
     white-space: nowrap;
     overflow: hidden;
