btn modif visibility pushed to left hand corner

--- a/front-end/src/app/core/quizzes/visibility/visibility-choice-modal.component.html
+++ b/front-end/src/app/core/quizzes/visibility/visibility-choice-modal.component.html
@@ -1,4 +1,4 @@
-<label for="modal-visibilityChoice" class="edit-button">Modifier la visibilité du quiz par les accueillis</label>
+<label for="modal-visibilityChoice" class="left-button">Modifier la visibilité du quiz</label>
 <button type="button" class="hidden" id="modal-visibilityChoice" (click)="modalService.open(visibilityChoiceModal)"></button>
 
 
