--- a/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
+++ b/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
@@ -9,7 +9,9 @@
       {{current_theme}}
     </option>
     </select>&nbsp;
-    <app-theme-form (themeAdded) = "initTheme($event)"></app-theme-form>
+    <div class="button-card" (click)="modalService.open(themeFormModal)"> 
+      <i class="fas fa-plus-circle"></i> Nouveau Thème
+  </div>
     <ng-template [ngTemplateOutlet] = "displayImage"></ng-template>
     <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template>        
     <button class="button-card" id="confirmEdit" (click)="addOrUpdateQuiz()">Valider</button>
@@ -35,5 +37,17 @@
     <div class="quiz-card">
       <img class="frame thumbnail" [src]="globalService.getImgSrc1(imageTmp)" alt="quiz image">
     </div>
+  </div>
+</ng-template>
+
+<ng-template #themeFormModal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Ajouter un thème</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+      <app-theme-form (themeAdded) = "initTheme($event); modal.close()"></app-theme-form>
   </div>
 </ng-template>
