--- a/front-end/src/app/results/quiz-attempt-details/quiz-attempt-details.component.scss
+++ b/front-end/src/app/results/quiz-attempt-details/quiz-attempt-details.component.scss
@@ -42,6 +42,10 @@
   @extend .horizontal-layout;
 }
 
+.quiz-card{
+  margin: 1em;
+}
+
 .attempt-card {
   @extend .quiz-card;
   margin-left: auto;
