--- a/front-end/src/app/results/statistics/statistics.component.html
+++ b/front-end/src/app/results/statistics/statistics.component.html
@@ -9,6 +9,9 @@
     <div *ngIf="player">
         <div class="flex-list">
             <div *ngFor="let attempt of playerAttempts" >
+                <button class="delete-button" (click)="deleteAttempt(attempt)">
+                    <i class="fas fa-times"></i>
+                </button>
                 <app-quiz-attempt [attempt]="attempt" routerLink="./{{attempt.id}}"></app-quiz-attempt>
             </div>
         </div>
