--- a/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
+++ b/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
@@ -5,7 +5,7 @@
 	<br>
 	<ng-template [ngTemplateOutlet] ="displayImage"></ng-template>
     <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template>   
-	<button type="submit" id="createQuestion" class="button-card" (click)="addOrUpdateQuestion()">Créer</button>
+	<button type="submit" id="createQuestion" class="button-card" (click)="addOrUpdateQuestion()">Valider</button>
 	<button type="button" id="reset" class="button-card" (click) = "reset()">Annuler</button>
 	</form>
 </div>
