--- a/front-end/src/app/start/password/password.component.scss
+++ b/front-end/src/app/start/password/password.component.scss
@@ -1,3 +1,29 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/layout.scss';
 @import '../../../styles/common.scss';
+
+.password{
+    margin-left: 1.5em;
+    text-align: center;
+    border: solid;
+    color: green;
+    width: 90%;
+}
+
+.big-button{
+    margin-top: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    text-align: center;
+    padding: unset;
+}
+
+.center{
+    width: 100%;
+    height: 40%;
+    max-width: 30em;
+    min-width: 15em;
+    min-height: 15em;
+    max-height: 30em;
+}
