--- a/front-end/src/app/start/password/password.component.html
+++ b/front-end/src/app/start/password/password.component.html
@@ -4,9 +4,9 @@
 </div>
 
 <div class="main">
-<div class = "center horizontal-center">
+<div class = "center ">
     <form [formGroup]="loginForm">
-        <input class = "horizontal-center"[formControlName]="'password'" type="password" placeholder="Entrez le mot de passe">
+        <input class = "password"[formControlName]="'password'" type="text" placeholder="Entrez le mot de passe">
         <div class = "big-button" (click) = "loginUser()">Valider</div>
         <div *ngIf="!isCorrect">
             Vous avez entrez une mauvaise valeur ... Veuillez réessayer !
